welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:3: error: not found: value estSurOrange
while (!estSurOrange()) {
        ^